# moonshot-ui

./: .gitignore  Makefile.am  Makefile.in  configure  configure.ac  moonshot-midl  moonshot-ui_0.7.1.orig.tar.xz.delta  moonshot-ui_0.7.1.orig.tar.xz.id  moonshot-ui_0.7.2.orig.tar.xz.delta  moonshot-ui_0.7.2.orig.tar.xz.id  moonshot-ui_1.0.3.orig.tar.xz.delta  moonshot-ui_1.0.3.orig.tar.xz.id  win-build  win-build.cmd
debian/: changelog  control
libmoonshot/: Makefile.am  libmoonshot-msrpc.c  libmoonshot.def  moonshot-msrpc.idl
mac/: gtkrc  moonshot-ui.bundle  moonshot-ui.plist
src/: moonshot-crypto-utils.c  moonshot-custom-vbox.vala  moonshot-futils.c  moonshot-id.vala  moonshot-idcard-widget.vala  moonshot-identities-manager.vala  moonshot-identity-dialog.vala  moonshot-identity-management-view.vala  moonshot-identity-manager-app.vala  moonshot-identity-request.vala  moonshot-keyring-store.vala  moonshot-local-flat-file-store.vala  moonshot-logger.vala  moonshot-password-dialog.vala  moonshot-provisioning-common.vala  moonshot-server-linux.vala  moonshot-server.vala  moonshot-settings.vala  moonshot-trust-anchor-dialog.vala  moonshot-utils.vala  moonshot-warning-dialog.vala  moonshot-webp-parser.vala
vapi/: moonshot-msrpc.vapi  msrpc-1.0-extra.vapi
webprovisioning/: cert-test.msht  complex-test.msht
windows/: app.wxs  win-gnu-env.cmd
